[gd_scene load_steps=4 format=3 uid="uid://b4p0ep42wesi1"]

[ext_resource type="Script" path="res://ui/media_viewer/video_player_controls/video_player_controls.gd" id="1_pun6c"]
[ext_resource type="Texture2D" uid="uid://cas13pywr4ltf" path="res://gfx/default_background.png" id="2_7gwqt"]
[ext_resource type="PackedScene" uid="uid://da2ycb4o4vxr3" path="res://ui/media_viewer/video_player_controls/time_display.tscn" id="2_fdtwv"]

[node name="VideoPlayerControls" type="Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pun6c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7gwqt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayPause" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Play / Pause"

[node name="Progress" type="HSlider" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="TimeDisplay" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_fdtwv")]
layout_mode = 2
size_flags_horizontal = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/PlayPause" to="." method="_on_play_pause_pressed"]
[connection signal="drag_ended" from="MarginContainer/HBoxContainer/Progress" to="." method="_on_progress_drag_ended"]
[connection signal="drag_started" from="MarginContainer/HBoxContainer/Progress" to="." method="_on_progress_drag_started"]
